# rm_sim_26

./: .gitmodules  CMakeLists.txt  README.md  package.xml
config/: sim_config.yaml
launch/: rmuc_2025_sim.launch.py
models/mecanum_car/: model.sdf  robot.urdf
moudles/mecanum_car/: model.sdf  robot.urdf
scripts/: laserscan_to_pointcloud.py
worlds/: rmuc_2025_world.world
